--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,3 @@
 <app-server></app-server>
 <app-server></app-server>
+<button class="btn btn-primary" [disabled]="!allowNewServers">Add Server</button>
