--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,6 @@
 <app-server></app-server>
 <app-server></app-server>
-<button class="btn btn-primary" [disabled]="!allowNewServers">Add Server</button>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<p>{{ serverName }}</p>
+<button class="btn btn-primary" [disabled]="!allowNewServers" (click)="onCreateServer()">Add Server</button>
+<p>{{ serverCreationStatus }}</p>
