--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,7 @@
 <app-server></app-server>
 <app-server></app-server>
 <input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<input type="text" class="form-control" [(ngModel)]="serverName">
 <p>{{ serverName }}</p>
 <button class="btn btn-primary" [disabled]="!allowNewServers" (click)="onCreateServer()">Add Server</button>
 <p>{{ serverCreationStatus }}</p>
