--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,7 +1,8 @@
-<app-server></app-server>
-<app-server></app-server>
-<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"> -->
+<h4><b>Server Name</b></h4>
 <input type="text" class="form-control" [(ngModel)]="serverName">
 <p>{{ serverName }}</p>
 <button class="btn btn-primary" [disabled]="!allowNewServers" (click)="onCreateServer()">Add Server</button>
-<p>{{ serverCreationStatus }}</p>
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p><hr>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<app-server *ngFor="let server of servers"></app-server>
