--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-xs-12">
             <h1>I'm in the App Component</h1>
@@ -22,4 +22,33 @@
             <app-even *ngFor="let evenNumber of evenNumbers" [number]="evenNumber"></app-even>
         </div>
     </div>
-</div>
+</div> -->
+
+
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <button
+          class="btn btn-primary"
+          (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+        <br><br>
+        <ul class="list-group">
+          <div *ngIf="onlyOdd">
+            <li
+            class="list-group-item"
+            *ngFor="let odd of oddNumbers">
+            {{ odd }}
+          </li>
+          </div>
+          <div *ngIf="!onlyOdd">
+            <li
+            class="list-group-item"
+            *ngFor="let even of evenNumbers">
+            {{ even }}
+          </li>
+          </div>  
+        </ul>
+      </div>
+    </div>
+  </div>
+  
