--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,20 +30,24 @@
       <div class="col-xs-12">
         <button
           class="btn btn-primary"
-          (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+          (click)="onlyOdd = !onlyOdd">Toggle Even/Odd</button>
         <br><br>
         <ul class="list-group">
           <div *ngIf="onlyOdd">
             <li
             class="list-group-item"
-            *ngFor="let odd of oddNumbers">
+            *ngFor="let odd of oddNumbers"
+            [ngClass]="{odd: odd % 2 !== 0}"
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}">
             {{ odd }}
           </li>
           </div>
           <div *ngIf="!onlyOdd">
             <li
             class="list-group-item"
-            *ngFor="let even of evenNumbers">
+            *ngFor="let even of evenNumbers"
+            [ngClass]="{even: even % 2 !== 0}"
+            [ngStyle]="{backgroundColor: even % 2 === 0 ? 'Green' : 'transparent'}">
             {{ even }}
           </li>
           </div>  
