--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,7 @@
           </li>
           </div>  
         </ul>
+        <p appBasicHighlight>This styling is done using custom attribute directive</p>
       </div>
     </div>
   </div>
