custom attribute directives using renderer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,6 +53,8 @@
           </div>  
         </ul>
         <p appBasicHighlight>This styling is done using custom attribute directive</p>
+        <p appBetterHighlight>This styling is done using custom attribute directive using renderer</p>
+
       </div>
     </div>
   </div>
